# webpageRAG

./: .gitignore  Dockerfile  README.md  ejemplo.env  pyproject.toml
data/chroma/: chroma.sqlite3
src/: api_handler.py
src/rag/: extractor.py
src/rag/componentes/: database.py  embedding_model.py  historial_db.py
src/rag/core/: database.py  embedding_model.py  llm_model.py  modelo_mensaje.py  recuperador.py
src/scripts/: cargarBD.py  extractor.py
